# SnackBase

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  cleanup_dev.py  docker-compose.yml  main.py  pyproject.toml  railway.json  verify_invitation_system.py  verify_record_delete.py
.agent/rules/: api-routes.md  architecture.md  audit-logging.md  authentication.md  database.md  domain-layer.md  frontend.md  general.md  hooks-system.md  multi-tenancy.md  permissions.md
alembic/: env.py
alembic/versions/: 038a7194dd07_enhance_password_reset_template.py  084e50e30ae8_create_collection_rules_table.py  0ea276bf29bc_add_email_sent_to_invitations.py  147572043440_seed_invitation_email_template.py  1799ee5d7311_add_email_tables.py  1a81ce6dcb21_create_token_blacklist.py  20260214_create_token_blacklist.py  20260219_add_is_default_to_configurations.py  20260330_create_webhooks_tables.py  20260401_create_jobs_table.py  20260402_create_hooks_table.py  20260403_add_hook_condition_and_executions.py  20260403_create_endpoints_tables.py  20260403_create_workflow_tables.py  20260411_add_view_collection_support.py  (+15 more)
docs/: README.md  api-examples.md  architecture.md  deployment.md  frontend.md  hooks.md  macros.md  permissions.md  quick-start.md  realtime.md
docs/guides/: README.md  (+13 more)
scripts/: backup_db.py
tests/: conftest.py  verify_realtime.py
ui/: .dockerignore  .env.example  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.e2e.json  vite.config.ts
(+764 files in other folders)
